--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
                     <p>Indian Accent</p>
                 </div>
                 <div class="card">
-                    <img src="restaurant2.jpg" alt="Restaurant 2">
-                    <p>Biryani Blues</p>
+                    <img src="Bomras.jpg" alt="Bomras">
+                    <p>Bomras</p>
                 </div>
                 <div class="card">
-                    <img src="restaurant3.jpg" alt="Restaurant 3">
+                    <img src="Barbeque Nation.jpg" alt="Barbeque Nation">
                     <p>Barbeque Nation</p>
                 </div>
                 <div class="card">
-                    <img src="restaurant4.jpg" alt="Restaurant 4">
-                    <p>The Chinese Wok</p>
+                    <img src="Noon.jpg" alt="Noon 4">
+                    <p>Noon</p>
                 </div>
             </div>
         </div>
