--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
         <div class="cart-items">
             <!-- Item 1 -->
             <div class="cart-item">
-                <img src="burger.jpg" alt="Burger">
+                <img src="burger.jpg" alt="burger">
                 <div class="item-details">
                     <h3>Burger</h3>
                     <p>Price: ₹120</p>
